--- a/ListViewEx/app/src/main/AndroidManifest.xml
+++ b/ListViewEx/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".SendMsgActivity"
+            android:label="SendMessage"
+            android:theme="@android:style/Theme.Dialog">
+            </activity>
+
+
+
     </application>
 
 </manifest>
